--- a/compcomm/compcomm8/news.txt
+++ b/compcomm/compcomm8/news.txt
@@ -77,7 +77,7 @@ So as to keep the example self-contained and also to demonstrate some tools usef
   from cctbx import miller
   from cctbx.development import random_structure
   import random
-  
+
   indices = miller.build_set(
           crystal_symmetry=crystal.symmetry(unit_cell=(10,11,12, 90,105,90),
                                             space_group_symbol="P21/c"),
@@ -163,7 +163,7 @@ The cctbx does actually provide all the tools to find, store and apply special p
       unit_cell=(10,10,10,90,90,90),
       space_group_symbol="Pm3m")
   crystal_symmetry.show_summary()
-  
+
   special_position_settings = crystal_symmetry.special_position_settings(
     min_distance_sym_equiv=0.5)
 
@@ -171,13 +171,13 @@ The site symmetry of a position of given fractional coordinates is then obtained
 
   site_symmetry = special_position_settings.site_symmetry(
      site=(0.3, 0.31, 0.111))
-  
+
 Since that position is at a Cartesian distance smaller than 0.5 from a special position x=y, the former is snapped onto the latter and the resulting ``site_symmetry`` object refer to the special position (0.305, 0.305, 0.111).
 
 Then::
 
   site_constraints = site_symmetry.site_constraints()
-  
+
 gives access to the constraints on site position::
 
   >>> site_constraints.n_independent_params()
@@ -186,34 +186,102 @@ gives access to the constraints on site position::
   (0.305, 0.111)
 
 The other way around, one can determine all the site coordinates from the independent ones::
-  
+
   >>> site_constraints.all_params(independent_params=(0.2, 0.1))
   (0.2, 0.2, 0.1)
 
 The most interesting facility for refinement is the handling of gradients. To illustrate it, let us introduce a simple function f of the site coordinates x,y,z::
 
   def f(x,y,z): return -x + 2*y + 3*z
-  
+
 which we then restrict onto the special position locus::
 
   def g(u,v):
     x, y, z = site_constraints.all_params((u,v))
     return f(x,y,z)
-    
+
 We wish to compute the derivatives of g with respect to u and v knowing the derivatives of f with respect to x,y,z. During a refinement, f would be the L.S. target for example. Those derivatives of g are easily obtained with::
 
   >>> independent_gradients = site_constraints.independent_gradients(
         all_gradients=flex.double([-1,2,3]))
   (1.0, 3.0)
-  
+
 where (-1,2,3) are the derivatives of f.
 
 
-==================
-Phil developements
-==================
+=================
+Phil developments
+=================
 
-XXX
+Phil (Python-based hierarchical interchange language) is a module
+for the management of application parameters and, to some degree,
+inputs. Phil was first introduced in Newsletter No 5. In Newsletter
+No 7. we presented a complete example application which uses Phil for
+the handling of program parameters.
+
+Overall, Phil has been very stable after an intense development push
+almost three years ago. Some features were added in response to needs
+that arose as part of the development of other applications, and a
+few bugs were fixed. These changes are very conservative. However,
+recently there has also been an important semantic change
+affecting "multiple definitions" and "multiple scopes". The new
+features and changes are reflected in the `updated documentation
+<http://cctbx.sourceforge.net/libtbx_phil.html>`_ which is based on
+parts of our original article in Newsletter No. 5. Important
+new features and changes include:
+
+  - The handling of multiple scopes went through a few iterations
+    eliminating bugs, inconsistencies and inefficiencies. The latest
+    implementation (as of Oct 2007) is considered mature, stable
+    and intuitive.
+
+  - The new ``.fetch_diff()`` method returns only objects with
+    non-default values. This is most useful for applications
+    with a large number of parameters. Usually most parameters
+    are not changed by the user. ``.fetch_diff()`` pin-points
+    the (few) changes.
+
+  - The previous plain ``include`` syntax was changed to ``include file``;
+    the new ``include scope`` was syntax added. The ``include scope``
+    feature builds on Python's standard import mechanism. In practice
+    it is found to be much more useful than the ``include file``
+    feature.
+
+  - The syntax-aware comment feature now uses ``!`` as the comment
+    character. For example::
+
+      !crystal_symmetry {
+        unit_cell = None
+        space_group = None
+      }
+
+    The exclamation mark comments out the entire ``crystal_symmetry``
+    scope including all embedded definitions. ``#crystal_symmetry``
+    is now a normal one-line comment as expected by most users.
+    Based on feedback, the distinction between ``#crystal_symmetry``
+    (syntax-aware comment) and ``# crystal_symmetry`` (one-line comment)
+    was found to be too subtle.
+
+  - Again based on feedback, the ``{`` and ``}`` scope-delineation
+    characters (compare with the ``crystal_symmetry`` example above)
+    are now interpreted as one-character keywords. In contrast to the
+    initial implementation, any ``{`` and ``}`` in strings have to be
+    quoted. This leads to a more obvious syntax. It also enables a
+    scope name and embedded definitions to appear on the same line.
+    This can be convenient in certain situations, in particular for
+    definitions specified on the command-line.
+
+  - Similarly, ``;`` characters are now interpreted as one-character
+    keywords (they had no syntactical meaning in the original
+    implementation). This enables ``scope { a=1; b=2 }`` all on
+    one line.
+
+  - Related to the ``{``, ``}`` scope-delineation change, the
+    ``${varname}`` variable substitution syntax was changed to
+    ``$(varname)``.
+
+For more details see the `updated documentation
+<http://cctbx.sourceforge.net/libtbx_phil.html>`_.
 
 ==========
 Subversion
