--- a/compcomm/newsletter08/news.txt
+++ b/compcomm/newsletter08/news.txt
@@ -28,9 +28,9 @@ this newsletter as "Newsletter No. 1", "Newsletter No. 2", etc. to
 improve readability. The full citations are included in the reference
 section.
 
-==============
- Introduction
-==============
+============
+Introduction
+============
 
 The `Computational Crystallography Toolbox` (cctbx,
 http://cctbx.sourceforge.net/) is the open-source component of a
@@ -63,13 +63,22 @@ cctbx source code repository from CVS to Subversion (SVN).
 Refinement tools for small-molecule crystallographers
 =====================================================
 
-
 Refinement against F\ :sup:`2`
 ------------------------------
 
-Small-molecule crystallographers almost exclusively rely on the minimisation of a least-square target to refine a structure. The cctbx has provided a least-square target for a long time but only for F. Since F\ :sup:`2` refinement is very popular among small-molecule crystallographers, a new target has been recently added to the cctbx. The class ``cctbx.xray.unified_least_squares_residual`` provides a single entry point to the both of F and F\ :sup:`2` refinement.
+Small-molecule crystallographers almost exclusively rely on the
+minimization of a least-square target to refine a structure. The
+cctbx has provided a least-square target for a long time but only for
+F. Since F\ :sup:`2` refinement is very popular among small-molecule
+crystallographers, a new target has recently been added to the
+cctbx. The class ``cctbx.xray.unified_least_squares_residual`` provides
+a single entry point to both F and F\ :sup:`2` refinement.
 
-So as to keep the example self-contained and also to demonstrate some tools useful to develop and debug crystallographic algorithms, instead of starting from real data, we will use randomly generated crystal structures. Atoms are randomly spread in the unit cell and the structure factors are then computed::
+To keep the example self-contained, and also to demonstrate some
+tools useful to develop and debug crystallographic algorithms,
+instead of starting from real data, we will use randomly generated
+crystal structures. Atoms are randomly spread in the unit cell and
+the structure factors are then computed::
 
   from cctbx.array_family import flex
   from cctbx import xray
@@ -90,7 +99,8 @@ So as to keep the example self-contained and also to demonstrate some tools usef
     random_u_iso=True)
   f_ideal = structure.structure_factors(d_min=indices.d_min()).f_calc()
 
-Then we extract the amplitudes or intensities and we put them on a different scale to make the example a bit more realistic::
+Then we extract the amplitudes or intensities and we put them on a
+different scale to make the example a bit more realistic::
 
   f_obs = f_ideal.amplitudes()
   f_obs.set_observation_type_xray_amplitude()
@@ -99,7 +109,9 @@ Then we extract the amplitudes or intensities and we put them on a different sca
   f_obs_square.set_observation_type_xray_intensity()
   f_obs_square *= 3
 
-In practice we would get f_obs or f_obs_square from a data file using the ``iotbx`` and the observation type would have been automatically set up for us.
+In practice we would get f_obs or f_obs_square from a data file using
+the ``iotbx`` and the observation type would have been automatically
+set up for us.
 
 Then we can construct the least-square targets and examine them::
 
@@ -113,17 +125,27 @@ Then we can construct the least-square targets and examine them::
   print "against F^2: value=%.3f, scale=%.3f" % (residuals.target(),
                                                  residuals.scale_factor())
 
-The constructor of the class automatically recognises whether the data passed to it are amplitudes and intensities and it adapts the computations accordingly, correctly getting a target value of 0 and a scale factor of resp. 2 and 3 as expected in this trivial example.
+The constructor of the class automatically recognizes whether the
+data passed to it are amplitudes and intensities and it adapts the
+computations accordingly, correctly getting a target value of 0 and
+a scale factor of resp. 2 and 3 as expected in this trivial example.
 
-By passing ``compute_derivatives=True``, we require the computation of the derivatives of the L.S. target function with respect to F\ :sub:`calc` (h) for each miller indices h. They are available as ``residuals.derivatives()``. Derivatives now brings us to discuss refinement.
+By passing ``compute_derivatives=True``, we require the computation
+of the derivatives of the L.S. target function with respect to F\
+:sub:`calc` (h) for each Miller index h. They are available as
+``residuals.derivatives()``. Derivatives now brings us to discuss
+refinement.
 
-So as to demonstrate refinement, we will first add a perturbation to the crystal structure as well as allowing the refinement of atom sites::
+To demonstrate refinement, we will first add a perturbation to the
+crystal structure as well as allowing the refinement of atom sites::
 
   perturbed_structure = structure.random_shift_sites(max_shift_cart=0.2)
   for s in perturbed_structure.scatterers():
           s.flags.set_grad_site(True)
 
-The simplest refinement engine in the cctbx is ``cctbx.xray.minimization.lbfgs``. For a refinement against F\ :sup:`2`::
+The simplest refinement engine in the cctbx is
+``cctbx.xray.minimization.lbfgs``. For a refinement against F\
+:sup:`2`::
 
   refining_structure = perturbed_structure.deep_copy_scatterers()
   optimiser = xray.lbfgs(
@@ -135,29 +157,66 @@ The simplest refinement engine in the cctbx is ``cctbx.xray.minimization.lbfgs``
   print "Final L.S. residual:%.3f" % optimiser.final_target_value
   refining_structure.show_scatterers()
 
-The LBFGS algorithm used to minimise the target function needs to compute its partial derivatives with respect to the refined parameters (atomic position here). This is where the derivatives which we showed to be obtainable by ``residuals.derivatives()`` above come into play: they are combined, by using the chain rule, with the derivatives of F\ :sub:`calc` (h) with respect to the refined parameters.
+The LBFGS algorithm used to minimize the target function needs to
+compute its partial derivatives with respect to the refined parameters
+(atomic position here). This is where the derivatives which we showed
+to be obtainable by ``residuals.derivatives()`` above come into play:
+they are combined, by using the chain rule, with the derivatives of F\
+:sub:`calc` (h) with respect to the refined parameters.
 
 Least-squares weights
 ---------------------
 
-By default, ``xray.unified_least_squares_residual`` tries to make sensible choices for the least-squares weights, i.e. unit weights for refinement against F and the so-called quasi-unit weights for refinement against F\ :sup:`2`, which are 1/(4 F\ :sup:`2`\ :sub:`obs`). The latter choice is known to result in more stable a refinement. However most of the time experimental error are available, as ``f_obs_square.sigmas()`` and the least-square weights should take advantage of them. The pure statistical weights 1/|sigma|\ :sup:`2` are rarely used in small molecule crystallography. The most popular choice is that of the ShelXL program,
-1/(|sigma|\ (F\ :sup:`2`\ :sub:`obs`)\ :sup:`2` + (a P)\ :sup:`2` + b P) where P = 1/3 max(0, F\ :sup:`2`\ :sub:`obs`) + 2/3 F\ :sup:`2`\ :sub:`calc`, which down-weights the stronger reflection while reducing statistical bias by the use of P (Wilson 1976).
+By default, ``xray.unified_least_squares_residual`` tries to make
+sensible choices for the least-squares weights, i.e. unit weights
+for refinement against F and the so-called quasi-unit weights
+for refinement against F\ :sup:`2`, which are 1/(4 F\ :sup:`2`\
+:sub:`obs`). The latter choice is known to result in a more stable
+refinement. However, almost universally experimental error estimates
+are available, as ``f_obs_square.sigmas()`` and the least-square
+weights should take advantage of them. The pure statistical
+weights 1/|sigma|\ :sup:`2` are rarely used in small molecule
+crystallography. The most popular choice is that of the ShelXL_ program,
+1/(|sigma|\ (F\ :sup:`2`\ :sub:`obs`)\ :sup:`2` + (a P)\ :sup:`2` +
+b P) where P = 1/3 max(0, F\ :sup:`2`\ :sub:`obs`) + 2/3 F\ :sup:`2`\
+:sub:`calc`, which down-weights the stronger reflection while reducing
+statistical bias by the use of P (Wilson 1976).
 
-This weighting scheme is available in module ``cctbx.xray.weighting_schemes``::
+This weighting scheme is available in the module
+``cctbx.xray.weighting_schemes``::
 
   weighting = xray.weighting_schemes.shelx_weighting()
   shelx_weighted_ls_against_f_square = xray.unified_least_squares_residual(
           f_obs_square, weighting=weighting)
 
-That least-square target can then be used with ``lbfgs``. The default is that of ShelXL, i.e. a=0.1 and b=0, which is best suited for early refinements when the structure is still incomplete. All the other weighting schemes we mentioned are also provided by that module (the reader is invited to read the comments for each Python class).
+This least-square target can then be used with the ``lbfgs``
+minimizer. The default is that of ShelXL_, i.e. a=0.1 and b=0, which
+is best suited for early refinements when the structure is still
+incomplete. All the other weighting schemes we mentioned are also
+provided by that module (the reader is invited to read the comments
+for each Python class).
+
+.. _ShelXL: http://shelx.uni-ac.gwdg.de/
 
 
 Special position constraints
 ----------------------------
 
-The traditional way to deal with the refinement of crystal structures with atoms on special position is to constraint the latter never to move away from the special position, in effect minimising the target function under those constraints. This not what the LBFGS minimisers implemented in the cctbx and the mmtbx do however. Since very few atoms if any at all are on special positions, one can safely, at each cycle, let those atoms drift away from their special position and snap them back onto it before the next cycle. In the small molecule world, on the contrary, it is not uncommon that all atoms are on special positions.
+The traditional way to deal with the refinement of crystal structures
+with atoms on special position is to constraint the latter never
+to move away from the special position, in effect minimizing the
+target function under those constraints. However, this not what's
+implemented in the minimizer introduced above, mainly because it
+wasn't considered important enough for macro-molecular models, which
+usually have very few atoms on special positions. One can safely,
+at each refinement cycle, let those atoms drift away from the special
+positions and snap them back on before the next cycle. In contrast,
+in the small molecule world it is not uncommon that all atoms are on
+special positions and the ad-hoc treatment is more problematic.
 
-The cctbx does actually provide all the tools to find, store and apply special position constraints and we will therefore start by describing those fundamental tools.::
+The cctbx does actually provide all the tools to find, store and
+apply special position constraints. We will therefore start by
+introducing those fundamental tools::
 
   crystal_symmetry = crystal.symmetry(
       unit_cell=(10,10,10,90,90,90),
@@ -167,30 +226,38 @@ The cctbx does actually provide all the tools to find, store and apply special p
   special_position_settings = crystal_symmetry.special_position_settings(
     min_distance_sym_equiv=0.5)
 
-The site symmetry of a position of given fractional coordinates is then obtained by::
+The site symmetry of a position given in fractional coordinates is
+then obtained by::
 
   site_symmetry = special_position_settings.site_symmetry(
      site=(0.3, 0.31, 0.111))
 
-Since that position is at a Cartesian distance smaller than 0.5 from a special position x=y, the former is snapped onto the latter and the resulting ``site_symmetry`` object refer to the special position (0.305, 0.305, 0.111).
+The given position is at a Cartesian distance smaller than 0.5 A from a
+special position with x=y. The ``site_symmetry`` algorithm computes
+the exact location of the nearest special position (Grosse-Kunstleve
+and Adams, 2002). The resulting ``site_symmetry.exact_site()``
+is (0.305, 0.305, 0.111).
 
 Then::
 
   site_constraints = site_symmetry.site_constraints()
 
-gives access to the constraints on site position::
+gives access to the constraints on the exact site::
 
   >>> site_constraints.n_independent_params()
   2
   >>> site_constraints.independent_params(all_params=site_symmetry.exact_site())
   (0.305, 0.111)
 
-The other way around, one can determine all the site coordinates from the independent ones::
+The other way around, one can determine all the site coordinates from
+the independent ones::
 
   >>> site_constraints.all_params(independent_params=(0.2, 0.1))
   (0.2, 0.2, 0.1)
 
-The most interesting facility for refinement is the handling of gradients. To illustrate it, let us introduce a simple function f of the site coordinates x,y,z::
+The most interesting facility for refinement is the handling of
+gradients. To illustrate it, let us introduce a simple function f of
+the site coordinates x,y,z::
 
   def f(x,y,z): return -x + 2*y + 3*z
 
@@ -200,13 +267,16 @@ which we then restrict onto the special position locus::
     x, y, z = site_constraints.all_params((u,v))
     return f(x,y,z)
 
-We wish to compute the derivatives of g with respect to u and v knowing the derivatives of f with respect to x,y,z. During a refinement, f would be the L.S. target for example. Those derivatives of g are easily obtained with::
+We wish to compute the derivatives of g with respect to u and v knowing
+the derivatives of f with respect to x,y,z. During a refinement,
+f would be the L.S. target for example. Those derivatives of g are
+easily obtained with::
 
   >>> independent_gradients = site_constraints.independent_gradients(
         all_gradients=flex.double([-1,2,3]))
   (1.0, 3.0)
 
-where (-1,2,3) are the derivatives of f.
+where ``[-1,2,3]`` are the derivatives of f w.r.t. x,y,z.
 
 
 =================
@@ -232,7 +302,7 @@ new features and changes include:
 
   - The handling of multiple scopes went through a few iterations
     eliminating bugs, inconsistencies and inefficiencies. The latest
-    implementation (as of Oct 2007) is considered mature, stable
+    implementation (as of October 2007) is considered mature, stable
     and intuitive.
 
   - The new ``.fetch_diff()`` method returns only objects with
@@ -355,6 +425,8 @@ L.J. Bourhis gratefully acknowledge the financial support of EPSRC under grant n
 ============
  References
 ============
+
+Grosse-Kunstleve, R.W., Adams, P.D. (2002). Acta Cryst. A58, 60-65.
 
 Grosse-Kunstleve, R.W., Adams, P.D. (2003).
 Newsletter of the IUCr Commission on Crystallographic Computing, 1, 28-38.
