--- a/compcomm/newsletter08/news.txt
+++ b/compcomm/newsletter08/news.txt
@@ -203,16 +203,16 @@ Special position constraints
 ----------------------------
 
 The traditional way to deal with the refinement of crystal structures
-with atoms on special position is to constraint the latter never
-to move away from the special position, in effect minimizing the
-target function under those constraints. However, this not what's
-implemented in the minimizer introduced above, mainly because it
-wasn't considered important enough for macro-molecular models, which
-usually have very few atoms on special positions. One can safely,
-at each refinement cycle, let those atoms drift away from the special
-positions and snap them back on before the next cycle. In contrast,
-in the small molecule world it is not uncommon that all atoms are on
-special positions and the ad-hoc treatment is more problematic.
+with atoms on special position is to constrain the latter never to
+move away from the special position, in effect minimizing the target
+function under those constraints. However, the minimizer introduced
+above does not implement these constraints, mainly because this is
+less important for macro-molecular models, which usually have very
+few atoms on special positions. One can safely, at each refinement
+cycle, let those atoms move away from the special positions and move
+them back before the next cycle. In contrast, in the small molecule
+world it is not uncommon that all atoms are on special positions and
+the ad-hoc treatment is more problematic.
 
 The cctbx does actually provide all the tools to find, store and
 apply special position constraints. We will therefore start by
@@ -285,9 +285,9 @@ Phil developments
 
 Phil (Python-based hierarchical interchange language) is a module
 for the management of application parameters and, to some degree,
-inputs. Phil was first introduced in Newsletter No 5. In Newsletter
-No 7. we presented a complete example application which uses Phil for
-the handling of program parameters.
+inputs. Phil was first introduced in Newsletter No. 5. In Newsletter
+No. 7 we presented a complete example application which uses Phil
+for the handling of program parameters.
 
 Overall, Phil has been very stable after an intense development push
 almost three years ago. Some features were added in response to needs
